# mobile_robot-ros2

./: .clang-format  .gitignore  .gitmodules  404.html  README.md  debug.html  index.html  optimization.html  package.json  requirements.txt  run-ros.sh  test.py
.github/workflows/: docs.pnpm.yml  docs.yml
assets/: 404.html-7a008781.js  app-691e7cc7.js  debug.html-2df15fdf.js  debug.html-dbe02731.js  dt_mqtt.html-1d81aa51.js  dt_mqtt.html-a7e9da64.js  dt_rtmp.html-1b5f8570.js  dt_rtmp.html-3b6106d1.js  index.html-dc194cc9.js  index.html-df9f2ced.js  optimization.html-5e4fe697.js  optimization.html-c79bb68b.js  sensor_joy.html-785fe17f.js  sensor_joy.html-d03ef2d3.js  style-b090ff29.css  uwb.html-06cb3e92.js  uwb.html-e0627c2f.js
configs/: data_transmission.json  mqtt-control_request.json  mqtt-control_response.json  mqtt-data.json  state.json  system_state.json
docker/: color.sh  run-aarch64-jammy.bash  run-aarch64-jammy.sh  run-aarch64-l4t.bash  run-arm64-darwin.sh  run-bullseye.sh  run-jammy.bash  run-jammy.sh  run-nano.sh  tag.sh
docker/compose/: docker-compose.humble-base.arm64.darwin.yml  docker-compose.ros-humble-desktop.aarch64.jammy.yml  docker-humble.bullseye.yml
docker/containers/: Dockerfile.ros-desktop.foxy.l4t  Dockerfile.ros-humble-base.arm64.darwin  Dockerfile.ros-humble-desktop.aarch64.jammy  Dockerfile.ros-humble-desktop.aarch64.l4t  Dockerfile.ros.foxy.l4t
docker/scripts/: install-opencv.sh  ros2_build.sh  ros_distro.sh
docker/scripts-/: build-container.sh  color.sh  cuda-env.txt  docker_base.sh  l4t_version.sh  opencv_install.sh  opencv_version.sh  ros2_build.sh  提前下载.sh
dockerfiles/: ros-desktop.foxy.jammy.dockerfile  ros-desktop.jammy.dockerfile
docs/: .gitignore  README copy.md  README.md  debug.md  install.md  optimization.md
docs/.vuepress/: config.ts
docs/tests/: uwb.md
modules/base/base_node/: CMakeLists.txt
modules/base/base_node/app/: base_node_main.cpp
modules/base/base_node/include/base_node/: base_node.hpp
modules/base/base_node/scripts/: test.sh
modules/base/base_node/src/: base_node.cpp
modules/common/base_node/: CMakeLists.txt  package.xml
modules/common/base_node/app/: base_node_main.cpp
modules/common/base_node/include/base_node/: base_node.hpp
modules/common/base_node/src/: base_node.cpp
modules/common/node_template/: CMakeLists.txt  package.xml
modules/common/node_template/app/: node_template.cpp
modules/common/node_template/scripts/: test.sh
modules/common/system_state/: CMakeLists.txt  package.xml
modules/common/system_state/include/system_state/: error.hpp  error_code.hpp  services.hpp  state.hpp  topics.hpp  types.hpp
modules/controller/motion_controller.legacy/: CMakeLists.txt  package.xml
modules/controller/motion_controller.legacy/serial/: CMakeLists.txt
modules/controller/motion_controller.legacy/serial/src/impl/list_ports/: list_ports_linux.cc
modules/controller/motion_manager/: CMakeLists.txt  package.xml
modules/controller/motion_manager/include/motion_manager/: motion_manager.hpp  motion_serial.hpp
modules/controller/motion_manager/scripts/: serial-data.py  serial-write.py
modules/controller_py/: setup.py
modules/interfaces/common_interfaces/: CMakeLists.txt
modules/roslaunch/: package.xml  (+2 more)
python/: header.launch.py
ros/: .gitignore  find_tty.sh  read-video.py  run-ros.sh  run.sh
ros-example/: run-ros_example.sh
ros-example/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros-example/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros-example/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros/src/cpp_ju_video/: CMakeLists.txt  package.xml
ros/src/cpp_ju_video/include/cpp_ju_video/: image_converter.h  ros_compat.h
ros/src/cpp_ju_video/src/: image_converter.cpp  node_video_reader.cpp  ros_compat.cpp
ros/src/cpp_video_streamer/: CMakeLists.txt  package.xml
ros/src/cpp_video_streamer/include/video_streamer/: video_reader.h
ros/src/cpp_video_streamer/src/: node_video_reader.cpp  node_video_viewer.cpp  video_reader.cpp  video_viewer.cpp
scripts/: build-container-jetson.sh  build-emqx.sh  build-jetson_utils.sh  build-jsoncpp.sh  build-mqtt.sh  build-ros2-jetson.sh  build-serial.sh  camera-distortion-correction.py  clean.sh  create-package.sh  download-l4t-ros2.sh  download.sh  lock-test.py  py_install_dep.sh  read-video.py  run-darwin.zsh  run-docker.sh  run-ros.sh  run-ubuntu-test.sh  run-ubuntu.sh  run.sh  run.zsh  send-to-jetson.sh  test.py  up-to-jetson.sh
sources/common/system_state/: CMakeLists.txt
sources/common/system_state/include/system_state/: error.hpp  state.hpp
sources/controller/motion_manager/: CMakeLists.txt
sources/controller/motion_manager/app/: motion_manager.cpp  motion_manager_node.cpp
sources/controller/motion_manager/include/motion_manager/: motion_manager.hpp  motion_serial.hpp
sources/controller/motion_manager/scripts/: serial-re.py  serial-read.py
sources/controller/motion_manager/src/: motion_manager.cpp  motion_manager__serial.cpp  motion_serial.cpp
sources/interfaces/state_interfaces/: CMakeLists.txt
sources/interfaces/state_interfaces/msg/: SystemState.msg
sources/manager/system_manager/: CMakeLists.txt
sources/manager/system_manager/app/: system_manager_node.cpp
sources/manager/system_manager/include/system_manager/: system_manager.hpp  system_state.hpp
sources/manager/system_manager/src/: system_manager.cpp
sources/manager/system_manager/test/: test_system_manager.cpp
src-tutorial/: package.xml
src/car_controller/: CMakeLists.txt
src/car_controller/include/car_controller/: CarController.h  SerialController.h
src/control_panel_flask_vue/: package.xml  setup.cfg  setup.py
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp
src/cpp_video_streamer/: CMakeLists.txt
src/cpp_video_streamer/include/video_streamer/: video_reader.h  video_viewer.h
src/cpp_video_streamer/launch/: video_reader.launch.py
src/cpp_video_streamer/src/: video_reader.cpp  video_reader_callback.cpp  video_viewer.cpp
tests/: rp.py  uwb.html  uwb.py
(+250 files in other folders)
